--- a/app/src/main/res/layout/layout_home_content.xml
+++ b/app/src/main/res/layout/layout_home_content.xml
@@ -12,6 +12,26 @@
 
         </android.support.v4.view.ViewPager>
 
+        <TextView
+            android:id="@+id/userfeed_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:text="Users Feed" />
+
+        <ListView
+            android:id="@+id/userfeed_list"
+            android:layout_width="match_parent"
+            android:layout_height="434dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="26dp" />
+
     </RelativeLayout>
 
 
