--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="Home.HomeActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,29 +19,10 @@
 
             <include layout="@layout/layout_home_content"/>
 
-            <TextView
-                android:id="@+id/userfeed_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="12dp"
-                android:text="Users Feed" />
-
-            <ListView
-                android:id="@+id/userfeed_list"
-                android:layout_width="match_parent"
-                android:layout_height="434dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="26dp" />
-
-
         </RelativeLayout>
 
         <include layout="@layout/tool_bottom_navigation"/>
 
-
     </RelativeLayout>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
