add log out function. Change Profile files.

--- a/app/src/main/res/layout/profile_user_states.xml
+++ b/app/src/main/res/layout/profile_user_states.xml
@@ -13,7 +13,7 @@
             android:id="@+id/tvPosts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="250"
+            android:text="null"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,7 @@
             android:id="@+id/tvFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="300"
+            android:text="null"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
@@ -65,7 +65,7 @@
             android:id="@+id/tvFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="400"
+            android:text="null"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:layout_marginTop="2dp"
@@ -84,11 +84,11 @@
             android:layout_marginRight="-22dp"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <TextView
-            android:id="@+id/textEditProfile"
+        <Button
+            android:id="@+id/logout_btn"
             android:layout_width="156dp"
-            android:layout_height="18dp"
-            android:text="Edit your profile"
+            android:layout_height="wrap_content"
+            android:text="Log Out"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:layout_marginTop="8dp"
