--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,6 +30,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/profile_state_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -64,10 +65,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/profile_middle_info"
+            android:id="@+id/profile_middle_info_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/linLayout"
+            android:layout_below="@+id/profile_state_layout"
             android:orientation="vertical"
             android:padding="20dp"
             android:background="@color/white">
@@ -86,16 +87,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="I live in Vancouver, BC"
+                android:text="null"
                 android:textColor="@color/black"
                 android:textSize="16sp"/>
 
             <TextView
-                android:id="@+id/website"
+                android:id="@+id/display_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="https://codingwithmitch.com"
+                android:text="null"
                 android:textColor="@color/link_blue"
                 android:textSize="16sp"
                 />
@@ -106,7 +107,7 @@
             android:id="@+id/relLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/profile_middle_info"
+            android:layout_below="@+id/profile_middle_info_layout"
             android:layout_marginBottom="50dp"
             >
 
