--- a/app/src/main/res/layout/layout_userfeed_item.xml
+++ b/app/src/main/res/layout/layout_userfeed_item.xml
@@ -81,9 +81,9 @@
             android:layout_width="88dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/users_comment"
+            android:layout_alignStart="@+id/textView"
             android:layout_marginBottom="85dp"
-            android:text="#comments#" />
+            android:text="#Comments#" />
 
     </RelativeLayout>
 
