--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,14 +12,25 @@
         android:layout_height="match_parent"
         android:id="@+id/home_parent_layout">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/feed_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/home_content">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
+            android:text="Users Feed" />
 
-            <include layout="@layout/layout_home_content"/>
-
-        </RelativeLayout>
+        <ListView
+            android:id="@+id/feed_list"
+            android:layout_width="match_parent"
+            android:layout_height="434dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="26dp" />
 
         <include layout="@layout/tool_bottom_navigation"/>
 
