--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -111,7 +111,7 @@
             >
 
             <GridView
-                android:id="@+id/gridView"
+                android:id="@+id/profileGridView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
