--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -103,7 +103,7 @@
             >
 
             <GridView
-                android:id="@+id/gridViewView"
+                android:id="@+id/gridSearchView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
